tests/ui/parser/keyword-abstract.stderr
error: expected identifier, found reserved keyword `abstract`
  --> $DIR/keyword-abstract.rs:2:9
   |
LL |     let abstract = ();
   |         ^^^^^^^^ expected identifier, found reserved keyword
   |
help: escape `abstract` to use it as an identifier
   |
LL |     let r#abstract = ();
   |         ++

error: aborting due to previous error

